--- a/tp.html
+++ b/tp.html
@@ -3,35 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tableau employes</title>
+    <link rel="stylesheet" href="tp.css">
+    <title>Document</title>
 </head>
 <body>
-    <table>
-        <caption>Employes</caption>
-        <thead>  
-            <tr>
-                <th>nom</th>
-                <th>prenom</th>
-                <th>email</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Diop</td>
-                <td>Ibrahima</td>
-                <td>email@gmail.com</td>
-            </tr>
-            <tr>
-                <td>Fall</td>
-                <td>Modou</td>
-                <td>fall@gmail.com</td>
-            </tr>
-            <tr>
-                <td>Mbaye</td>
-                <td>Tidiane</td>
-                <td>exemple@gmail.com</td>
-            </tr>
-        </tbody>
-    </table>
+    <div id="marge">
+        <div id="container">
+            <main>
+                <section>
+                    <div class="contain">
+                        <div class="image"></div>
+                        <div class="text"><p class="Kelly">Kelly</p></div>
+                    </div>
+                </section>
+            </main>
+            <aside>
+                <section>
+                    <div class="containe">
+                        <div class="text">
+                            <p class="WHITE">WHITE</p>
+                        </div>
+                    </div>
+                </section>
+            </aside>
+    
+            <footer>
+    
+            </footer>
+        </div>
+    </div>
+
 </body>
 </html>
