--- a/tp.html
+++ b/tp.html
@@ -16,6 +16,12 @@
                         <div class="text"><p class="Kelly">Kelly</p></div>
                     </div>
                 </section>
+                <section>
+                    <div class="edu">
+                        <h1 id="modif">EDUCATION</h1>
+                    </div>
+                    <div id="bulle"></div>
+                </section>
             </main>
             <aside>
                 <section>
@@ -23,6 +29,18 @@
                         <div class="text">
                             <p class="WHITE">WHITE</p>
                         </div>
+                    </div>
+                </section>
+                <section>  
+                    <div class="barr">
+                        <span class="barr1"></span>
+                        <p id="mm">Etienne</p>
+                    </div>
+                </section>
+                <section>  
+                    <div class="barre">
+                        <span class="barr2"></span>
+                        <p id="m">Photocpie piece</p>
                     </div>
                 </section>
             </aside>
