--- a/tp.html
+++ b/tp.html
@@ -13,7 +13,7 @@
                 <section>
                     <div class="contain">
                         <div class="image"></div>
-                        <div class="text"><p class="Kelly">Kelly</p></div>
+                        <div class="text"><label class="Kelly">Kelly</label></div>
                     </div>
                 </section>
                 <section>
