--- a/tp.html
+++ b/tp.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="marge">
+    <div id="marge1">
         <div id="container">
             <main>
                 <section>
